ttys0.net/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-ttys0.net
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: website-ttys0.net
  replicas: 2
  template:
    metadata:
      labels:
        app: website-ttys0.net
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: arm64
      containers:
      - name: hugo-ttys0
        image: docker.ttys0.net/hugo-ttys0-arm64:1
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: docker-reg-secret
