ttys0.net/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-ttys0net
  namespace: ingress-nginx
  labels:
    name: website-ttys0net
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: website-ttys0.net
