ttys0.net/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-ttys0.net
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
#    ingress.kubernetes.io/proxy-body-size: 500m
spec:
  rules:
    - host: "ttys0.net"
      http:
        paths:
          - backend:
              serviceName: website-ttys0net
              servicePort: 80
          - backend:
              serviceName: webdav
              servicePort: 80
            path: /webdav
          - backend:
              serviceName: static-web
              servicePort: 80
            path: /static
    - host: "home.ttys0.net"
      http:
        paths:
          - backend:
              serviceName: website-ttys0net
              servicePort: 80
          - backend:
              serviceName: webdav
              servicePort: 80
            path: /webdav
          - backend:
              serviceName: static-web
              servicePort: 80
            path: /static
    - host: "dav.ttys0.net"
      http:
        paths:
          - backend:
              serviceName: webdav
              servicePort: 80
            path: /webdav
    - host: "kibana.ttys0.net"
      http:
        paths:
          - backend:
              serviceName: kibana
              servicePort: 80
